test/files/continuations-neg/t5314-type-error.check
t5314-type-error.scala:7: error: type mismatch;
 found   : Int @scala.util.continuations.cpsParam[Int,Int]
 required: Int @scala.util.continuations.cpsParam[String,String]
  def bar(x:Int): Int @cps[String] = return foo(x)
                                               ^
one error found
